# 2026-NVIDIA

./: .gitignore  README.md
.claude/: settings.local.json
team-submissions/: AI_REPORT.md  FINAL_REPORT.md  PRD.md  README.md  TEST_SUITE.md  pyproject.toml  requirements.txt  run_benchmarks.sh
team-submissions/src/: benchmark_gpu.py  run_complete_benchmark.py  run_phase2.py  run_tests.py  validate_cpu.py
team-submissions/src/labs_solver/: __init__.py  energy.py  energy_gpu.py  mts.py  mts_gpu.py  quantum.py  utils.py
team-submissions/tests/: __init__.py  conftest.py  test_bit_packing.py  test_cache.py  test_energy.py  test_integration.py  test_mts.py  test_quantum.py
tutorial_notebook/: 01_quantum_enhanced_optimization_LAB.ipynb
